--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
       <button id="fetchBtn" class="btn btn-outline-primary">URL içeriğini ekle</button>
     </div>
 
-    <hr>
+ 
 
+<hr>
 
     <!-- Kontroller -->
     <div class="row g-3 mb-3">
@@ -84,8 +85,16 @@
           <input class="form-check-input" type="checkbox" id="focusToggle" checked>
           <label class="form-check-label" for="focusToggle">Okuma Odağı</label>
         </div>
+        <div class="mt-2">
+          <select id="voiceGender" class="form-select form-select-sm">
+            <option value="female" selected>Kadın Sesi</option>
+            <option value="male">Erkek Sesi</option>
+          </select>
+        </div>
       </div>
     </div>
+
+       <hr>
 
     <hr>
 
