--- a/index.html
+++ b/index.html
@@ -4,170 +4,215 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Flash-Reader</title>
-
-  <link rel="icon" href="data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='0.9em' font-size='90'%3E%E2%9A%A1%3C/text%3E%3C/svg%3E">
-  <!-- Bootstrap 5 CDN -->
+  <!-- <link rel="icon" href="data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='0.9em' font-size='90'%3E%E2%9A%A1%3C/text%3E%3C/svg%3E"> -->
+  <link rel="icon" type="image/png" href="logo.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <div class="container py-4">
 
-
-    <!--BAŞLIK-->
-    <header class="d-flex justify-content-center align-items-center mb-3">
-        <span style="font-size:2rem; margin-right:10px;">⚡</span>
-        <h1 class="h4 m-0"><strong>Hızlı Okuma Egzersizi</strong></h1>
-        <span style="font-size:2rem; margin-left:10px;">⚡</span>
-    </header>
-
-
-    <hr>
-
-
-    <!-- Tema anahtarı – ortalı, büyük -->
-    <div class="d-flex justify-content-center mb-4">
-      <div class="form-check form-switch big-switch">
-          <input class="form-check-input" type="checkbox" id="themeToggle">
-      </div>
-      <a href="#" class="ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Karanlık mod, göz yorgunluğunu azaltır.">
-    🌙/☀️
-  </a>
-    </div>
-
-
-    <hr>
-
-    <!-- URL kutusu -->
-    <div class="input-group mb-3">
-      <input id="urlInput" type="url" class="form-control" placeholder="https://site.com/makale">
-      <button id="fetchBtn" class="btn btn-outline-primary">URL içeriğini ekle</button>
-    </div>
-
- 
-
-<hr>
-
-    <!-- Kontroller -->
-    <div class="row g-3 mb-3">
-      <!-- Özel metin -->
-      <div class="col-12 col-md-4">
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="customTextToggle">
-          <label class="form-check-label" for="customTextToggle">Özel metin</label>
-        </div>
-        <textarea id="customTextArea" class="form-control mt-2" rows="4"
-                  placeholder="Özel metninizi yazın…"></textarea>
+    <!-- HEADER -->
+    <header class="d-flex justify-content-between align-items-center mb-4">
+      <div class="d-flex align-items-center gap-3">
+        <img src="logo.png" alt="Sema Hoca Logo" style="height: 50px;">
+        <h1 class="h5 m-0" data-i18n="title">Sema Hoca ile Hızlı Okuma Egzersizi</h1>
       </div>
 
-      <!-- Hazır metinler / Dosya -->
-      <div class="col-12 col-md-4">
-        <select id="librarySelect" class="form-select">
-          <option selected disabled>Hazır metin seç…</option>
-        </select>
+      <div class="d-flex align-items-center gap-3">
+        <!-- Tema kapsülü -->
+        <div class="theme-toggle">
+          <span class="theme-emoji" aria-hidden="true">🌙</span>
+          <label class="form-check form-switch m-0">
+            <input class="form-check-input" type="checkbox" id="themeToggle" aria-label="Tema">
+          </label>
+          <span class="theme-emoji" aria-hidden="true">☀️</span>
+        </div>
 
-        <input type="file" id="fileInput" accept=".txt" class="form-control mt-2">
-        <select id="partSelect" class="form-select mt-2 d-none"></select>
-      </div>
-
-      <!-- Diğer seçenekler -->
-      <div class="col-12 col-md-4">
-        <div class="form-check mb-2">
-          <input class="form-check-input" type="checkbox" id="shuffleToggle">
-          <label class="form-check-label" for="shuffleToggle">Karıştır</label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="soundToggle" checked>
-          <label class="form-check-label" for="soundToggle">Sesli okuma (≤ 300 KPM)</label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="focusToggle" checked>
-          <label class="form-check-label" for="focusToggle">Okuma Odağı</label>
-        </div>
-        <div class="mt-2">
-          <select id="voiceGender" class="form-select form-select-sm">
-            <option value="female" selected>Kadın Sesi</option>
-            <option value="male">Erkek Sesi</option>
+        <!-- Dil seçici (HEADER) -->
+        <div style="width: 120px;">
+          <select id="langSelect" class="form-select form-select-sm" aria-label="Dil">
+            <option value="tr" selected>🇹🇷 Türkçe</option>
+            <option value="en">🇬🇧 English</option>
           </select>
         </div>
       </div>
+    </header>
+
+    <!-- TABS -->
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="premade-tab" data-bs-toggle="tab"
+                data-bs-target="#premade-tab-pane" type="button" role="tab"
+                aria-controls="premade-tab-pane" aria-selected="true"
+                data-i18n="tab_premade">📄 Hazır Metin & Dosya</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="custom-tab" data-bs-toggle="tab"
+                data-bs-target="#custom-tab-pane" type="button" role="tab"
+                aria-controls="custom-tab-pane" aria-selected="false"
+                data-i18n="tab_custom">✍️ Özel Metin & URL</button>
+      </li>
+    </ul>
+
+    <div class="tab-content" id="myTabContent">
+      <!-- PREMADE -->
+      <div class="tab-pane fade show active p-3 border border-top-0 rounded-bottom mb-3"
+           id="premade-tab-pane" role="tabpanel" aria-labelledby="premade-tab" tabindex="0">
+        <select id="librarySelect" class="form-select">
+          <option selected disabled data-i18n="choose_preset">Hazır metin seç…</option>
+        </select>
+        <input type="file" id="fileInput" accept=".txt, .csv" class="form-control mt-2">
+        <select id="partSelect" class="form-select mt-2 d-none"></select>
+      </div>
+
+      <!-- CUSTOM -->
+      <div class="tab-pane fade p-3 border border-top-0 rounded-bottom mb-3"
+           id="custom-tab-pane" role="tabpanel" aria-labelledby="custom-tab" tabindex="0">
+        <div class="input-group mb-3">
+          <input id="urlInput" type="url" class="form-control"
+                 placeholder="https://site.com/makale"
+                 data-i18n-placeholder="url_placeholder">
+          <button id="fetchBtn" class="btn btn-outline-primary" data-i18n="btn_fetch">URL içeriğini ekle</button>
+        </div>
+
+        <div class="form-check text-start mb-2">
+          <input class="form-check-input" type="checkbox" id="customTextToggle">
+          <label class="form-check-label" for="customTextToggle" data-i18n="use_text_here">Buradaki metni kullan</label>
+        </div>
+
+        <textarea id="customTextArea" class="form-control" rows="6"
+                  placeholder="Veya özel metninizi buraya yapıştırın…"
+                  data-i18n-placeholder="custom_placeholder"></textarea>
+      </div>
     </div>
 
-       <hr>
+    <!-- AYARLAR -->
+    <div class="d-grid gap-2 mb-3">
+      <button class="btn btn-outline-secondary" type="button" data-bs-toggle="collapse"
+              data-bs-target="#settingsCollapse" aria-expanded="false" aria-controls="settingsCollapse"
+              data-i18n="settings">Ayarlar</button>
+    </div>
 
-    <hr>
+    <div class="collapse" id="settingsCollapse">
+      <div class="card card-body mb-3">
+        <div class="settings-grid">
+          <label class="form-check m-0">
+            <input class="form-check-input" type="checkbox" id="shuffleToggle">
+            <span class="form-check-label" data-i18n="shuffle">Karıştır</span>
+          </label>
 
+          <label class="form-check m-0">
+            <input class="form-check-input" type="checkbox" id="soundToggle">
+            <span class="form-check-label" data-i18n="tts">Sesli okuma (≤ 60 KPM)</span>
+          </label>
 
-    <!-- Sliderlar -->
-  <div class="row row-cols-1 row-cols-md-3 g-3 mb-3">
+          <label class="form-check m-0">
+            <input class="form-check-input" type="checkbox" id="focusToggle" checked>
+            <span class="form-check-label" data-i18n="focus_mode">Okuma Odağı</span>
+          </label>
+
+          <div class="d-flex align-items-center gap-2">
+            <label for="voiceGender" class="col-form-label-sm" data-i18n="voice">Ses</label>
+            <select id="voiceGender" class="form-select form-select-sm" style="width:140px">
+              <option value="female" selected data-i18n="female">Kadın Sesi</option>
+              <option value="male" data-i18n="male">Erkek Sesi</option>
+            </select>
+          </div>
+
+          <!-- DİL (AYARLAR) -->
+          <div class="d-flex align-items-center gap-2">
+            <label for="langSelectSettings" class="col-form-label-sm">🌐</label>
+            <select id="langSelectSettings" class="form-select form-select-sm" style="width:140px">
+              <option value="tr">🇹🇷 Türkçe</option>
+              <option value="en">🇬🇧 English</option>
+            </select>
+          </div>
+
+          <!-- DİKEY ODAK / KONUMLAR -->
+          <label class="form-check m-0">
+            <input class="form-check-input" type="checkbox" id="focusVertToggle">
+            <span class="form-check-label">Dikey Odağı</span>
+          </label>
+
+          <div class="d-flex align-items-center gap-2">
+            <label for="focusYRange" class="col-form-label-sm">Odak Y (%)</label>
+            <input id="focusYRange" type="range" min="0" max="100" value="50" class="form-range" style="width:180px">
+            <span id="focusYValue" class="small text-muted">50</span>
+          </div>
+
+          <div class="d-flex align-items-center gap-2">
+            <label for="focusXRange" class="col-form-label-sm">Odak X (%)</label>
+            <input id="focusXRange" type="range" min="0" max="100" value="50" class="form-range" style="width:180px">
+            <span id="focusXValue" class="small text-muted">50</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- SLIDERLAR -->
+    <div class="row row-cols-1 row-cols-md-3 g-3 mb-3">
       <div class="col">
-        <label class="form-label w-100">Hız (KPM): <span id="wpmValue">250</span>
+        <label class="form-label w-100">
+          <span data-i18n="speed">Hız (KPM)</span>: <span id="wpmValue">250</span>
           <input type="range" id="wpmSlider" class="form-range" min="10" max="1000" value="250">
         </label>
-        <small class="text-muted">Dakikada gösterilecek kelime sayısını ayarlar.</small>
+        <small class="text-muted" data-i18n="hint_speed">Dakikada gösterilecek kelime sayısını ayarlar.</small>
       </div>
       <div class="col">
-        <label class="form-label w-100">Kelime adeti: <span id="numWordsValue">1</span>
+        <label class="form-label w-100">
+          <span data-i18n="num_words">Kelime adeti</span>: <span id="numWordsValue">1</span>
           <input type="range" id="numWordsSlider" class="form-range" min="1" max="10" value="1">
         </label>
-        <small class="text-muted">Ekranda aynı anda kaç kelime görüneceğini seçin.</small>
+        <small class="text-muted" data-i18n="hint_num_words">Ekranda aynı anda kaç kelime görüneceğini seçin.</small>
       </div>
       <div class="col">
-        <label class="form-label w-100">Font (rem): <span id="fontSizeValue">3.5</span>
+        <label class="form-label w-100">
+          <span data-i18n="font">Font (rem)</span>: <span id="fontSizeValue">3.5</span>
           <input type="range" id="fontSizeSlider" class="form-range" min="1" max="80" step="0.1" value="3.5">
         </label>
-        <small class="text-muted">Okuma metninin yazı tipi boyutunu değiştirin.</small>
+        <small class="text-muted" data-i18n="hint_font">Okuma metninin yazı tipi boyutunu değiştirin.</small>
       </div>
     </div>
 
-    <hr>
-
-
-    <!-- Düğmeler -->
-     <div class="d-flex flex-wrap gap-3 justify-content-center mb-3">
-        <button id="playPauseBtn" class="btn btn-primary px-4">Başlat</button>
-        <button id="resetBtn" class="btn btn-outline-secondary px-4">Baştan</button>
-        <!-- mobil tam-ekran -->
-        <button id="fullBtn"     class="btn btn-outline-dark">🔍 Büyüt</button>
-        <button id="exitFullBtn" class="btn btn-outline-dark d-none">↩︎ Küçült</button>
+    <!-- KONTROLLER -->
+    <div class="d-flex flex-wrap gap-3 justify-content-center mb-3">
+      <button id="playPauseBtn" class="btn btn-primary px-4" data-i18n="start">Başlat</button>
+      <button id="resetBtn" class="btn btn-outline-secondary px-4" data-i18n="restart">Baştan</button>
+      <button id="fullBtn" class="btn btn-outline-dark" data-i18n="zoom_in">🔍 Büyüt</button>
+      <button id="exitFullBtn" class="btn btn-outline-dark d-none" data-i18n="zoom_out">↩︎ Küçült</button>
     </div>
 
-    <hr>
-
-
-    <!-- Gösterim -->
-    <!-- <main id="display" class="border rounded p-4 text-center fw-bold"></main> -->
-<main id="display-wrapper" class="position-relative">
-      <div id="focus-line"></div>
+    <!-- GÖSTERİM -->
+    <main id="display-wrapper" class="position-relative">
+      <div id="focus-line"></div>          <!-- yatay çizgi -->
+      <div id="focus-line-vert"></div>     <!-- dikey çizgi -->
       <div id="display" class="border rounded p-4 text-center fw-bold"></div>
-      <div class="progress mt-2" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="height: 5px;">
-        <div id="progressBar" class="progress-bar bg-primary" style="width: 0%"></div>
+      <div class="progress mt-2" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="height:5px;">
+        <div id="progressBar" class="progress-bar bg-primary" style="width:0%"></div>
       </div>
     </main>
 
-    
+    <!-- YARDIM -->
     <div class="mt-4 pt-3 border-top">
-      <p class="text-muted">Kontrol Düğmeleri:</p>
-      <ul class="list-unstyled text-muted small">
-        <li><strong>URL içeriğini ekle:</strong> Verdiğiniz linkteki web sayfasının paragraflarını alır ve "Özel metin" kutusuna ekler.</li>
-        <li><strong>Özel metin:</strong> Kendi metninizi yapıştırarak okuma alıştırması yapmanızı sağlar.</li>
-        <li><strong>Hazır metin seç / Dosya:</strong> Hazır metinlerden birini seçmenizi veya bilgisayarınızdan `.txt` uzantılı bir dosya yüklemenizi sağlar.</li>
-        <li><strong>Karıştır:</strong> Metindeki kelimelerin sırasını rastgele karıştırır. Bu, kelimeleri tek tek tanıma hızınızı artırmaya odaklanır.</li>
-        <li><strong>Sesli okuma:</strong> Kelimeleri ekranda gösterirken aynı anda sesli olarak okur (Düşük hızlarda etkilidir).</li>
-        <li><strong>Başlat / Duraklat / Devam:</strong> Okuma egzersizini başlatır, duraklatır veya devam ettirir.</li>
-        <li><strong>Baştan:</strong> Mevcut okumayı sıfırlar ve metnin başına döner.</li>
-        <li><strong>🔍 Büyüt / ↩︎ Küçült:</strong> Okuma alanını tam ekran yaparak daha iyi odaklanmanızı sağlar.</li>
+      <p class="text-muted" data-i18n="help_title">Kontrol Düğmeleri:</p>
+      <ul class="list-unstyled small" style="color: var(--muted);">
+        <li data-i18n="help_url"><strong>URL içeriğini ekle:</strong> Linkteki metni “Özel metin” kutusuna ekler.</li>
+        <li data-i18n="help_custom"><strong>Özel metin:</strong> Kendi metninizi yapıştırarak pratik yapın.</li>
+        <li data-i18n="help_file"><strong>Hazır metin/Dosya:</strong> Hazır metin seçin veya .txt/.csv yükleyin.</li>
+        <li data-i18n="help_shuffle"><strong>Karıştır:</strong> Kelimelerin sırasını rastgele karıştırır.</li>
+        <li data-i18n="help_tts"><strong>Sesli okuma:</strong> Düşük hızlarda etkilidir.</li>
+        <li data-i18n="help_play"><strong>Başlat/Duraklat/Devam:</strong> Okumayı kontrol eder.</li>
+        <li data-i18n="help_restart"><strong>Baştan:</strong> Metnin başına döner.</li>
+        <li data-i18n="help_zoom"><strong>🔍 Büyüt / ↩︎ Küçült:</strong> Odak için tam ekran.</li>
       </ul>
     </div>
 
-    <hr>
-
-
-    <footer class="text-center small text-muted mt-4">© 2025 Tüm hakları saklıdır.</footer>
+    <footer class="text-center small text-muted mt-4">© 2025 fast-reading by orionis labs</footer>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="lang.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
